@@ -10,12 +10,12 @@
 CREATE TABLE badusers (
 	id		INT PRIMARY KEY,
 	username	VARCHAR(30) DEFAULT '' NOT NULL,
-	actiondate	TIMESTAMP WITH TIME ZONE DEFAULT sysdate NOT NULL,
+	incidentdate	TIMESTAMP WITH TIME ZONE DEFAULT sysdate NOT NULL,
 	reason		VARCHAR(128) DEFAULT '' NOT NULL,
 	admin		VARCHAR(128) DEFAULT '-' NOT NULL
 );
 CREATE SEQUENCE badusers_seq START WITH 1 INCREMENT BY 1;
-CREATE INDEX badusers_actiondate_idx ON badusers (actiondate);
+CREATE INDEX badusers_incidentdate_idx ON badusers (incidentdate);
 CREATE INDEX badusers_username_idx ON badusers (username);
 
 /* Trigger to emulate a serial # on the primary key */
