@@ -4,6 +4,8 @@ Ver 1.80:
   general_sessionclear_method and nasXX_sessionclear_method
 * Create a new function da_sql_limit() and use that to pass LIMIT arguments to the database layer
   since the syntax is different between db vendors
+* Rename the badusers date field to incidentdate to avoid reserved words in databases. Bug found by
+  Peter Nixon
 Ver 1.78:
 * Add a snmp_clearsession which can disconnect a user by using the Cisco AAA Session MIB
 * Add a configuration directive general_sessionclear_bin
